@@ -1,5 +1,15 @@
 2004-11-21  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (parse_arguments): Diagnose empty arguments, options
+	with missing argument, and support `--'.
+	* aclocal.in (parse_arguments): Diagnose options with missing
+	argument.
+	* tests/aclocal.test: More checks.
+	* tests/automake.test: New file.
+	* tests/postprog.test: Use `--' for fun.
+	* tests/Makefile.am (TESTS): Add automake.test.
+	Report from Eric Blake.
+
 	* lib/am/progs.am (installcheck-%DIR%PROGRAMS): Run programs with
 	/dev/null as input, so we do not hang on programs that read their
 	input without supporting --help and --version.
